Refactor admin system: remove isAdmin field, split controllers, clean up code
- Remove isAdmin field in favor of role-based system
- Combine V3 and V5 migrations into single V3 migration
- Split AdminController into separate controllers by category:
  - AdminDashboardController: dashboard endpoints
  - AdminUserController: user admin management
  - AdminRoleController: role assignment and management
  - AdminContentController: content management
- Remove unused imports (User in RoleService, PermissionService in AuthService)
- Delete unused SecurityUtil class (replaced by @AuthenticationPrincipal)